# Clone_Driver

./: .gitignore  README.md  brouillon.ipynb  build_mc3_left.py  convert_pickle_to_rds.py  dashboard.ipynb  dashboard.py  extra_data_helper.py  notebook.ipynb  notebook_0.ipynb  notebook_v0.ipynb  notebook_v1.ipynb  notes.md  prompt.txt  pyproject.toml  requirements.txt  streamlit_dashboard.py  ui.py
R/: .RData  .RDataTmp4  .Rhistory  .Rprofile  .gitignore  .lintr  GRanges_notes.R  R.Rproj  Rconfig.R  analysis_mc3.R  analysis_syn_nonsyn.R  annotate_clean_dt_with_merged.R  apply_new_method.R  apply_new_method_hyp_test.R  apply_ourmethod.R  brouillon.R  build_columns_from_maf.R  calculate_syn_nonsyn.R  example.R  extended_analysis.R  extract_non_utr_range.R  fun.R  get_merged_wgdata.R  gtf_manip.R  helpers.R  helpers_from_mike.R  helpers_utr.R  hyp_test.R  intersect.R  intersect_BED_GTF(get_0mut_genes).R  intersect_BED_GTF.R  intersect_annotate_clean_dt_with_merged.R  intersect_annotate_cleaned_with_merged.R  intersect_notes.R  main.R  main_loop.R  mc3_analysis.R  merge_icgc_tcga.R  plots.tar.xz  plottings.R  (+11 more)
archieve/: dashboard.py
archieve/comments/: clonality_comment.md  poisson_comment.md
archive/: server.py
archive/comments/: negbin_comment.md  stats_comments.md
helpers/: config.py  data_handlers.py  visualizations.py
src/: config.py  data_handlers.py  models.py  visualizations.py
